Fixed challenge having overly large image on mobile devices

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -128,6 +128,7 @@ a.anchor-link::before {
   border-color: #FFF;
   border: 5px solid rgba(255, 255, 255, 0.4);
   padding: 40px;
+  max-width: 100%;
 }
 
 .img-logo-navigation-bar {
